Update permissions in tree.yaml
---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/gobansource/code-coverage?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/.github/workflows/tree.yaml
+++ b/.github/workflows/tree.yaml
@@ -7,8 +7,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
       - uses: actions/checkout@v2
+        permissions: write-all
       - name: Run a multi-line script
         run: |
           tree -d -H '.' -L 3 --noreport --charset utf-8 >index.html
